# ten_framework.bak

./: .gitignore
core/include_internal/ten_runtime/app/: app.h  telemetry.h  ten_property.h
core/include_internal/ten_runtime/app/service_hub/: service_hub.h
core/include_internal/ten_runtime/app/service_hub/api/: api.h
core/include_internal/ten_runtime/binding/go/internal/: version.h
core/include_internal/ten_runtime/binding/nodejs/common/: version.h
core/include_internal/ten_runtime/binding/python/common/: version.h
core/include_internal/ten_runtime/common/: constant_str.h  version.h
core/include_internal/ten_rust/: ten_rust.h
core/src/ten_manager/: Cargo.toml
core/src/ten_manager/designer_frontend/: package.json
core/src/ten_manager/designer_frontend/src/store/: widget.tsx
core/src/ten_manager/designer_frontend/src/types/: graphs.ts
core/src/ten_manager/src/: main.rs  version.rs
core/src/ten_manager/src/cmd/: cmd_designer.rs  cmd_fetch.rs  cmd_run.rs
core/src/ten_manager/src/constants/: mod.rs
core/src/ten_manager/src/create/: mod.rs
core/src/ten_manager/src/dep_and_candidate/: mod.rs
core/src/ten_manager/src/designer/builtin_function/: common.rs  install.rs  install_all.rs  mod.rs
core/src/ten_manager/src/designer/exec/: mod.rs
core/src/ten_manager/src/manifest_lock/: mod.rs
core/src/ten_manager/src/registry/: found_result.rs  local.rs  remote.rs
core/src/ten_manager/tests/test_case/designer/: get_apps.rs  get_graphs.rs  get_packages_scripts.rs  load_apps.rs  reload_apps.rs
core/src/ten_runtime/: BUILD.gn  BUILD_release.gn  manifest.json
core/src/ten_runtime/app/: BUILD.gn  app.c  graph.c  internal.c  telemetry.c
core/src/ten_runtime/app/endpoint_system/: BUILD.gn
core/src/ten_runtime/app/msg_interface/: start_graph.c
core/src/ten_runtime/app/service_hub/: BUILD.gn  service_hub.c  telemetry.c
core/src/ten_runtime/app/service_hub/api/: BUILD.gn  api.c
core/src/ten_runtime/app/service_hub/telemetry/: BUILD.gn
core/src/ten_runtime/binding/go/: manifest.json
core/src/ten_runtime/binding/nodejs/: manifest.json
core/src/ten_runtime/binding/python/: manifest.json
core/src/ten_runtime/build_template/: preserved_metadata.c
core/src/ten_runtime/extension/extension_info/: extension_info.c
core/src/ten_runtime/extension_thread/: BUILD.gn
core/src/ten_runtime/extension_thread/msg_interface/: BUILD.gn
core/src/ten_runtime/extension_thread/service_hub/: BUILD.gn
core/src/ten_runtime/global/: BUILD.gn  signal.c
core/src/ten_runtime/metadata/: BUILD.gn
core/src/ten_runtime/schema_store/: BUILD.gn
core/src/ten_rust/: BUILD.gn  Cargo.toml  cbindgen.toml
core/src/ten_rust/src/: build.rs  lib.rs
core/src/ten_rust/src/constants/: endpoint.rs  mod.rs
core/src/ten_rust/src/endpoint/: api_handler.rs  mod.rs  telemetry_handler.rs
core/src/ten_rust/src/endpoint/telemetry/: counter.rs  gauge.rs  histogram.rs  mod.rs
core/src/ten_rust/src/endpoint_system/telemetry/: counter.rs  gauge.rs  histogram.rs
core/src/ten_rust/src/interface/: mod.rs
core/src/ten_rust/src/json_schema/data/: manifest.schema.json  property.schema.json
core/src/ten_rust/src/pkg_info/manifest/: mod.rs
core/src/ten_rust/src/schema/: bindings.rs
core/src/ten_rust/src/service_hub/: bindings.rs  mod.rs
core/src/ten_rust/src/service_hub/api/: mod.rs
core/src/ten_rust/src/telemetry/: mod.rs
core/src/ten_rust/tests/test_case/: interface.rs  mod.rs  test_mock.rs
core/src/ten_rust/tests/test_case/json_schema/: mod.rs
core/src/ten_utils/: BUILD.gn  output_libs.gni
tests/ten_runtime/: BUILD.gn
tests/ten_runtime/integration/cpp/check_start_graph/check_start_graph_app/: manifest.json
tests/ten_runtime/integration/cpp/ffmpeg_basic/ffmpeg_basic_app/: manifest.json
tests/ten_runtime/integration/cpp/multi_apps/app_1/: manifest.json
tests/ten_runtime/integration/go/start_graph_go/: BUILD.gn  test_case.py
tests/ten_runtime/integration/go/start_predefined_graph_go/: BUILD.gn  test_case.py
tests/ten_runtime/smoke/: BUILD.gn
tests/ten_runtime/smoke/start_graph/: start_graph_with_msg_conversion.cc
tests/ten_runtime/smoke/telemetry/: multi_app.cc  single_app_with_custom_endpoint.cc
(+100 files in other folders)
